<resources>
    <string name="app_name">APPLTREE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Pref_UI_NDBS_List">PREF_UI_NDBS_CHOSEN</string>
    <string name="Pref_UI_DT_Switch">PREF_UI_DTREE_ENABLED</string>
    <string name="Pref_UP_Remote_Switch">PREF_UP_REMOTE_ENABLED</string>
    <string name="Pref_Prompt_User_Subtlety_Checkbox">PREF_PROMPT_USER_SUBTLETY_ENABLED</string>
    <string name="Pref_Prompt_Default_User_Subtlety_Level">PREF_PROMPT_DEFAULT_USER_SUBTLETY_LEVEL</string>
    <string name="Pref_Prompt_Device_List">PREF_PROMPT_DEVICE_CHOSEN</string>
    <string name="Pref_Prompt_Default_Levels_Checkbox">PREF_PROMPT_DEFAULT_LEVELS_ENABLED</string>
    <string name="Pref_Prompt_Default_Levels">PREF_PROMPT_OPEN_DEFAULT_LEVELS</string>
    <string name="Pref_Prompt_UP_Levels">PREF_PROMPT_OPEN_UP_LEVELS</string>
    <string name="Pref_Prompt_Reminder_Levels">PREF_PROMPT_OPEN_REMINDER_LEVELS</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="bsdt_intro_tag">BSDT_INTRO_TAG</string>
    <string name="bsdt_shopping_tag">BSDT_SHOP_TAG</string>
    <string name="bsdt_appt_tag">BSDT_APPT_TAG</string>
    <string name="bsdt_medic_tag">BSDT_MEDIC_TAG</string>
    <string name="bsdt_social_tag">BSDT_SOCIAL_TAG</string>
    <string name="bsdt_daily_tag">BSDT_DAILY_TAG</string>
    <string name="bsdt_birthday_tag">BSDT_BIRTH_TAG</string>
    <string name="bs_gen_tag">BS_GEN_TAG</string>
    <string name="nddt_intro_tag">NDDT_INTRO_TAG</string>
    <string name="nd_title_tag">ND_TITLE_TAG</string>
    <string name="nd_date_tag">ND_DATE_TAG</string>
    <string name="nd_time_tag">ND_TIME_TAG</string>
    <string name="nd_duration_tag">ND_DURATION_TAG</string>
    <string name="nd_notification_tag">ND_NOTIFICATION_TAG</string>
    <string name="nd_notes_tag">ND_NOTES_TAG</string>
    <string name="nd_repeat_tag">ND_REPEAT_TAG</string>
    <string name="nd_reminder_level_tag">ND_REMINDER_LEVEL_TAG</string>
    <string name="nd_where_tag">ND_WHERE_TAG</string>
    <string name="nd_event_after_tag">ND_EVENT_AFTER_TAG</string>
    <string name="schedule_calendar_tag">SCHEDULE_CALENDAR_TAG</string>
    <string name="schedule_view_day_tag">SCHEDULE_VIEW_DAY_TAG</string>
    <string name="smart_reminder">Smart Reminder</string>
    <string name="smart_login">Login</string>
    <string name="pref_header_UI">User Interface</string>
    <string name="pref_UI_NDBS_title">Set UI Variant</string>
    <string-array name="pref_UI_NDBS_entries">
        <item>Broad Shallow</item>
        <item>Narrow Deep</item>
    </string-array>
    <string-array name="pref_UI_NDBS_values">
        <item>0</item> 
        <item>1</item> 
    </string-array>
    <string name="pref_UI_DT_title">Decision Tree</string>
    <string name="pref_header_UP">Unsolicited Prompts</string>
    <string name="pref_UP_headerAdd">Add Prompt</string>
    <string name="pref_Smart_reminding">smart_suggestion_preference</string>
    <string name="pref_UP_headerView">View Prompts</string>
    <string name="pref_UP_remote_switch_title">Enable Remote UPs</string>
    <string name="pref_UP_add_prompt_choose_date_title">Choose Date</string>
    <string name="pref_UP_add_prompt_specific_content_title">Set Specific Content</string>
    <string name="pref_UP_add_prompt_specific_content_hint">Enter Text...</string>
    <string name="pref_UP_add_prompt_choose_time_title">Choose Time</string>
    <string name="pref_UP_add_prompt_default_content">Do you need to set any reminders?</string>
    <string name="pref_UP_view_prompt_delete_dialog_title">Confirm Deletion</string>
    <string name="pref_UP_view_prompt_multi_delete_title">Delete</string>
    <string name="pref_UP_view_prompt_edit_level_button_edit">Edit</string>
    <string name="pref_UP_view_prompt_edit_level_button_save">Save</string>
    <string name="pref_header_Prompts">Prompt Levels</string>
    <string name="pref_prompt_general_category_title">General</string>
    <string name="pref_prompt_user_subtlety_checkbox_title">Allow User to Set Subtlety</string>
    <string name="pref_prompt_user_subtlety_checkbox_summary">User can manually set the subtlety of reminders</string>
    <string name="pref_prompt_default_prompt_level_title">Default User Subtlety Level</string>
    <string-array name="pref_prompt_default_prompt_level_entries_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_prompt_device_list_title">Set Prompt Devices</string>
    <string-array name="pref_prompt_device_entries">
        <item>Phone</item>
        <item>Phone and Watch</item>
    </string-array>
    <string-array name="smart_login_entries">
        <item>Collect data</item>
        <item>Do not collect data</item>
    </string-array>
    <string-array name="pref_prompt_remind_time_entries">
        <item>Morning</item>
        <item>Lunch</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>
    <string-array name="pref_prompt_device_values">
        <item>0</item> 
        <item>1</item> 
    </string-array>
    <string name="pref_prompt_level_category_title">Modality Levels</string>
    <string name="pref_prompt_default_levels_checkbox_title">Use Default Levels</string>
    <string name="pref_prompt_default_levels_header">Set Default Levels</string>
    <string name="pref_prompt_UP_levels_header">Set UP Levels</string>
    <string name="pref_prompt_reminder_levels_header">Set Reminder Levels</string>
    <string name="pref_prompt_modality_level_intent_key">TYPE</string>
    <string name="pref_prompt_modality_level_intent_value_default">DEFAULT</string>
    <string name="pref_prompt_modality_level_intent_value_UP">UP</string>
    <string name="pref_prompt_modality_level_intent_value_reminder">REMINDER</string>
    <string name="pref_prompt_level_category_0_title">Level: 0</string>
    <string name="pref_prompt_level_category_1_title">Level: 1</string>
    <string name="pref_prompt_level_category_2_title">Level: 2</string>
    <string name="pref_prompt_level_category_3_title">Level: 3</string>
    <string name="pref_prompt_level_vib_category_title">Vibration</string>
    <string name="pref_prompt_level_sound_category_title">Sound</string>
    <string name="pref_prompt_level_vis_category_title">Visual</string>
    <string name="pref_prompt_level_enable_vib_chk_key_0">ENABLE_VIBRARTION_0</string>
    <string name="pref_prompt_level_enable_vib_chk_key_1">ENABLE_VIBRARTION_1</string>
    <string name="pref_prompt_level_enable_vib_chk_key_2">ENABLE_VIBRARTION_2</string>
    <string name="pref_prompt_level_enable_vib_chk_key_3">ENABLE_VIBRARTION_3</string>
    <string name="pref_prompt_level_enable_vib_chk_key_0u">ENABLE_VIBRARTION_0u</string>
    <string name="pref_prompt_level_enable_vib_chk_key_1u">ENABLE_VIBRARTION_1u</string>
    <string name="pref_prompt_level_enable_vib_chk_key_2u">ENABLE_VIBRARTION_2u</string>
    <string name="pref_prompt_level_enable_vib_chk_key_3u">ENABLE_VIBRARTION_3u</string>
    <string name="pref_prompt_level_enable_vib_chk_key_0r">ENABLE_VIBRARTION_0r</string>
    <string name="pref_prompt_level_enable_vib_chk_key_1r">ENABLE_VIBRARTION_1r</string>
    <string name="pref_prompt_level_enable_vib_chk_key_2r">ENABLE_VIBRARTION_2r</string>
    <string name="pref_prompt_level_enable_vib_chk_key_3r">ENABLE_VIBRARTION_3r</string>
    <string name="pref_prompt_level_enable_vib_chk_string">Enable Vibration</string>
    <string name="pref_prompt_level_enable_sound_chk_key_0">ENABLE_SOUND_0</string>
    <string name="pref_prompt_level_enable_sound_chk_key_1">ENABLE_SOUND_1</string>
    <string name="pref_prompt_level_enable_sound_chk_key_2">ENABLE_SOUND_2</string>
    <string name="pref_prompt_level_enable_sound_chk_key_3">ENABLE_SOUND_3</string>
    <string name="pref_prompt_level_enable_sound_chk_key_0u">ENABLE_SOUND_0u</string>
    <string name="pref_prompt_level_enable_sound_chk_key_1u">ENABLE_SOUND_1u</string>
    <string name="pref_prompt_level_enable_sound_chk_key_2u">ENABLE_SOUND_2u</string>
    <string name="pref_prompt_level_enable_sound_chk_key_3u">ENABLE_SOUND_3u</string>
    <string name="pref_prompt_level_enable_sound_chk_key_0r">ENABLE_SOUND_0r</string>
    <string name="pref_prompt_level_enable_sound_chk_key_1r">ENABLE_SOUND_1r</string>
    <string name="pref_prompt_level_enable_sound_chk_key_2r">ENABLE_SOUND_2r</string>
    <string name="pref_prompt_level_enable_sound_chk_key_3r">ENABLE_SOUND_3r</string>
    <string name="pref_prompt_level_enable_sound_chk_string">Enable Sound</string>
    <string name="pref_prompt_level_enable_vis_chk_key_0">ENABLE_VISUAL_0</string>
    <string name="pref_prompt_level_enable_vis_chk_key_1">ENABLE_VISUAL_1</string>
    <string name="pref_prompt_level_enable_vis_chk_key_2">ENABLE_VISUAL_2</string>
    <string name="pref_prompt_level_enable_vis_chk_key_3">ENABLE_VISUAL_3</string>
    <string name="pref_prompt_level_enable_vis_chk_key_0u">ENABLE_VISUAL_0u</string>
    <string name="pref_prompt_level_enable_vis_chk_key_1u">ENABLE_VISUAL_1u</string>
    <string name="pref_prompt_level_enable_vis_chk_key_2u">ENABLE_VISUAL_2u</string>
    <string name="pref_prompt_level_enable_vis_chk_key_3u">ENABLE_VISUAL_3u</string>
    <string name="pref_prompt_level_enable_vis_chk_key_0r">ENABLE_VISUAL_0r</string>
    <string name="pref_prompt_level_enable_vis_chk_key_1r">ENABLE_VISUAL_1r</string>
    <string name="pref_prompt_level_enable_vis_chk_key_2r">ENABLE_VISUAL_2r</string>
    <string name="pref_prompt_level_enable_vis_chk_key_3r">ENABLE_VISUAL_3r</string>
    <string name="pref_prompt_level_enable_vis_chk_string">Enable Visual</string>
    <string name="pref_prompt_level_vib_burst_no_string">Number of Bursts</string>
    <string name="pref_prompt_level_vib_burst_no_key_0">VIB_BURST_NO_0</string>
    <string name="pref_prompt_level_vib_burst_no_key_1">VIB_BURST_NO_1</string>
    <string name="pref_prompt_level_vib_burst_no_key_2">VIB_BURST_NO_2</string>
    <string name="pref_prompt_level_vib_burst_no_key_3">VIB_BURST_NO_3</string>
    <string name="pref_prompt_level_vib_burst_no_key_0u">VIB_BURST_NO_0u</string>
    <string name="pref_prompt_level_vib_burst_no_key_1u">VIB_BURST_NO_1u</string>
    <string name="pref_prompt_level_vib_burst_no_key_2u">VIB_BURST_NO_2u</string>
    <string name="pref_prompt_level_vib_burst_no_key_3u">VIB_BURST_NO_3u</string>
    <string name="pref_prompt_level_vib_burst_no_key_0r">VIB_BURST_NO_0r</string>
    <string name="pref_prompt_level_vib_burst_no_key_1r">VIB_BURST_NO_1r</string>
    <string name="pref_header_log">Logs</string>
    <string name="frag_notification_warning">Warning: notification is set before current time</string>
    <string name="frag_nd_event_title_gen">EVENT</string>
    <string name="frag_nd_date_gen_subtitle">Enter the date of the event:</string>
    <string name="frag_nd_where_social">LOCATION</string>
    <string name="frag_nd_where_social_subtitle">Enter the location of the event:</string>
    <string name="frag_nd_where_social_hint">Event location...</string>
</resources>