<RelativeLayout style="@style/fragBgND"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:context="highway62.reminderapp.fragments.NDEventTitleFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/frag_nd_rootView"
            style="@style/innerCardPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!-- Event Title and Navigation -->
            <LinearLayout
                style="@style/fragNdNavBarTitleMarginBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Back Navigation -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".15">

                    <TextView
                        android:id="@+id/frag_nd_backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableTop="@drawable/ic_nav_back"
                        android:text="Back"/>

                </RelativeLayout>

                <!-- Title -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".70"
                    android:orientation="horizontal">

                    <!-- Title text -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/frag_nd_title_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frag_nd_where_social"
                            android:textColor="@color/gs5"
                            android:textSize="24sp"
                            android:layout_centerInParent="true"/>

                        <ImageView
                            style="@style/fragNdNavBarTitleIconMargin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/frag_nd_title_text"
                            android:src="@drawable/ic_frag_event_where"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                </LinearLayout>

                <!-- Forward Navigation -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".15">

                    <TextView
                        android:id="@+id/frag_nd_nextBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableTop="@drawable/ic_nav_next"
                        android:text="Next"/>

                </RelativeLayout>


            </LinearLayout>

            <!-- Seperator -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    style="@style/seperator"
                    android:layout_width="match_parent"/>

            </RelativeLayout>

            <!-- Subtitle -->
            <RelativeLayout
                style="@style/fragNdAboveContentTextMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/frag_nd_subtitle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frag_nd_where_social_subtitle"/>

            </RelativeLayout>

            <!-- Event title edit text -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/frag_nd_title_editTxt"
                    style="@style/cardMainWidgetPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f3f3f3"
                    android:hint="@string/frag_nd_where_social_hint"
                    android:textSize="18sp"
                    android:inputType="textMultiLine"
                    android:maxLines="3"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>